creating life counters

--- a/utilities.html
+++ b/utilities.html
@@ -17,7 +17,12 @@
         </header>
 
         <div class="main_content">
-
+            <div id="player_1" class="column">
+                <h3>Player 1</h3>
+            </div>
+            <div id="player_2" class="column">
+                <h3>Player 2</h3>
+            </div>
         </div>
     </body>
 </html>
