patched everything & prepared for add_player button

--- a/life_counter.html
+++ b/life_counter.html
@@ -8,19 +8,10 @@
         <link rel="stylesheet" type="text/css" media="all" href="css/life_counter.css"/>
     </head>
     <body>
-        <header>
-            <div class="nav_bar">
-                <ul>
-                    <li class="current"><a href="life_counter.html">Life Counter</a></li>
-                    <li><a href="other.html">Other</a></li>
-                </ul>
-            </div>
-        </header>
-
         <div class="main_content">
-            <div id="player_1" class="column">
-                <h3>Player 1</h3>
-                <h3 id="p1_life"></h3>
+            <div class="column">
+                <h3 class="player_name">abc</h3>
+                <h3 class="player_life"></h3>
                 <button class="button">+5</button>
                 <div class="clr"></div>
                 <button class="button">+1</button>
@@ -29,10 +20,10 @@
                 <div class="clr"></div>
                 <button class="button">-5</button>
                 <div class="clr"></div>
-            </div>
-            <div id="player_2" class="column">
-                <h3>Player 2</h3>
-                <h3 id="p2_life"></h3>
+            </div><!--
+            --><div class="column">
+                <h3 class="player_name">def</h3>
+                <h3 class="player_life"></h3>
                 <button class="button">+5</button>
                 <div class="clr"></div>
                 <button class="button">+1</button>
