--- a/html/life_counter.html
+++ b/html/life_counter.html
@@ -13,26 +13,30 @@
             <div class="column">
                 <h3 class="player_name">abc</h3>
                 <h3 class="player_life"></h3>
-                <button class="button">+5</button>
-                <div class="clr"></div>
-                <button class="button">+1</button>
-                <div class="clr"></div>
-                <button class="button">-1</button>
-                <div class="clr"></div>
-                <button class="button">-5</button>
-                <div class="clr"></div>
+                <div class="buttons">
+                    <button class="button">+5</button>
+                    <div class="clr"></div>
+                    <button class="button">+1</button>
+                    <div class="clr"></div>
+                    <button class="button">-1</button>
+                    <div class="clr"></div>
+                    <button class="button">-5</button>
+                    <div class="clr"></div>
+                </div>
             </div><!--
             --><div class="column">
                 <h3 class="player_name">def</h3>
                 <h3 class="player_life"></h3>
-                <button class="button">+5</button>
-                <div class="clr"></div>
-                <button class="button">+1</button>
-                <div class="clr"></div>
-                <button class="button">-1</button>
-                <div class="clr"></div>
-                <button class="button">-5</button>
-                <div class="clr"></div>
+                <div class="buttons">
+                    <button class="button">+5</button>
+                    <div class="clr"></div>
+                    <button class="button">+1</button>
+                    <div class="clr"></div>
+                    <button class="button">-1</button>
+                    <div class="clr"></div>
+                    <button class="button">-5</button>
+                    <div class="clr"></div>
+                </div>
             </div>
         </div>
         <script src="../javascript/life_counters.js"></script>
