--- a/html/life_counter.html
+++ b/html/life_counter.html
@@ -11,7 +11,7 @@
     <body>
         <div class="main_content">
             <div class="column">
-                <h3 class="player_name">abc</h3>
+                <h3 class="player_name">player_1</h3>
                 <h3 class="player_life"></h3>
                 <div class="buttons">
                     <button class="button">+5</button>
@@ -25,7 +25,7 @@
                 </div>
             </div><!--
             --><div class="column">
-                <h3 class="player_name">def</h3>
+                <h3 class="player_name">player_2</h3>
                 <h3 class="player_life"></h3>
                 <div class="buttons">
                     <button class="button">+5</button>
