--- a/html/life_counter.html
+++ b/html/life_counter.html
@@ -1,42 +1,40 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+        <meta name="viewport" content="device-width, initial-scale=1.0">
 
         <link rel="shortcut icon" href="../icons/favicon.png"/>
         <link rel="stylesheet" type="text/css" media="all" href="../css/all.css">
         <link rel="stylesheet" type="text/css" media="all" href="../css/nav_bar.css"/>
         <link rel="stylesheet" type="text/css" media="all" href="../css/life_counter.css"/>
+        <script type="module" src="../javascript/life_counters.js"></script>
     </head>
     <body>
         <div class="main_content">
             <div class="column">
+                <h3 class="player_name">abc</h3>
                 <h3 class="player_life"></h3>
-                <div class="buttons">
-                    <button class="button">+5</button>
-                    <div class="clr"></div>
-                    <button class="button">+1</button>
-                    <div class="clr"></div>
-                    <button class="button">-1</button>
-                    <div class="clr"></div>
-                    <button class="button">-5</button>
-                    <div class="clr"></div>
-                </div>
-            </div><!--
-            --><div class="column">
+                <button class="button_p5">+5</button>
+                <div class="clr"></div>
+                <button class="button_p1">+1</button>
+                <div class="clr"></div>
+                <button class="button_m1">-1</button>
+                <div class="clr"></div>
+                <button class="button_m5">-5</button>
+                <div class="clr"></div>
+            </div>
+            <div class="column">
+                <h3 class="player_name">cbd</h3>
                 <h3 class="player_life"></h3>
-                <div class="buttons">
-                    <button class="button">+5</button>
-                    <div class="clr"></div>
-                    <button class="button">+1</button>
-                    <div class="clr"></div>
-                    <button class="button">-1</button>
-                    <div class="clr"></div>
-                    <button class="button">-5</button>
-                    <div class="clr"></div>
-                </div>
+                <button class="button_p5">+5</button>
+                <div class="clr"></div>
+                <button class="button_p1">+1</button>
+                <div class="clr"></div>
+                <button class="button_m1">-1</button>
+                <div class="clr"></div>
+                <button class="button_m5">-5</button>
+                <div class="clr"></div>
             </div>
         </div>
-        <script src="../javascript/life_counters.js"></script>
     </body>
 </html>
