--- a/html/life_counter.html
+++ b/html/life_counter.html
@@ -23,6 +23,7 @@
                 <button class="button_m5">-5</button>
                 <div class="clr"></div>
             </div>
+            <div class="clr"></div>
             <div class="column">
                 <h3 class="player_name">cbd</h3>
                 <h3 class="player_life"></h3>
@@ -35,6 +36,7 @@
                 <button class="button_m5">-5</button>
                 <div class="clr"></div>
             </div>
+            <div class="clr"></div>
         </div>
     </body>
 </html>
