--- a/html/life_counter.html
+++ b/html/life_counter.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" type="text/css" media="all" href="../css/nav_bar.css"/>
         <link rel="stylesheet" type="text/css" media="all" href="../css/life_counter.css"/>
         <script type="module" src="../javascript/life_counters.js"></script>
+        <script type="module" src="../javascript/utilities.js"></script>
     </head>
     <body>
         <div class="main_content">
