preparing for github pages deployment

--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="device-width, initial-scale=1.0">
 
-        <link rel="shortcut icon" href="../icons/favicon.png"/>
-        <link rel="stylesheet" type="text/css" media="all" href="../css/all.css">
-        <link rel="stylesheet" type="text/css" media="all" href="../css/main.css">
+        <link rel="shortcut icon" href="icons/favicon.png"/>
+        <link rel="stylesheet" type="text/css" media="all" href="css/all.css">
+        <link rel="stylesheet" type="text/css" media="all" href="css/main.css">
     </head>
 
     <body>
@@ -16,13 +15,13 @@
         </div>
 
         <div id="selection_menu">
-            <a href="life_counter.html">
+            <a href="html/life_counter.html">
                 <div class="option">
                     Life Counter
                 </div>
             </a>
         </div>
 
-        <script src="../javascript/main.js"></script>
+        <script src="javascript/main.js"></script>
     </body>
 </html>
