minor fixes, added website link to readme

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="device-width, initial-scale=1.0">
+        <meta name="viewport" content="initial-scale=1.0">
 
         <link rel="shortcut icon" href="icons/favicon.png"/>
         <link rel="stylesheet" type="text/css" media="all" href="css/all.css">
@@ -11,17 +11,14 @@
     <body>
         <div id="intro">
             <h1>Magic Helper</h1>
-            <h3>Life Counter already available!</h3>
         </div>
 
         <div id="selection_menu">
-            <a href="html/life_counter.html">
-                <div class="option">
+            <div class="option">
+                <a href="html/life_counter.html">
                     Life Counter
-                </div>
-            </a>
+                </a>
+            </div>
         </div>
-
-        <script src="javascript/main.js"></script>
     </body>
 </html>
