--- a/html/life_counter.html
+++ b/html/life_counter.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="device-width, initial-scale=1.0">
+        <meta name="viewport" content="initial-scale=1.0">
 
         <link rel="shortcut icon" href="../icons/favicon.png"/>
         <link rel="stylesheet" type="text/css" media="all" href="../css/all.css">
