fixed life_counter. only 2 players and 20 starting life for now

--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
         </div>
 
         <div id="selection_menu">
-            <div class="option">
-                <a href="html/life_counter.html">
-                    Life Counter
-                </a>
-            </div>
+            <a href="html/life_counter.html" class="option option-text">
+                Life Counter
+            </a>
         </div>
     </body>
 </html>
