--- a/html/life_counter.html
+++ b/html/life_counter.html
@@ -11,27 +11,17 @@
     <body>
         <div class="main_content">
             <div class="column">
-                <h3 class="player_name">abc</h3>
+                <button class="button p1 player1">+1</button>
                 <h3 class="player_life"></h3>
-                <button class="button_p5">+5</button>
                 <div class="clr"></div>
-                <button class="button_p1">+1</button>
-                <div class="clr"></div>
-                <button class="button_m1">-1</button>
-                <div class="clr"></div>
-                <button class="button_m5">-5</button>
+                <button class="button m1 player1">-1</button>
                 <div class="clr"></div>
             </div>
             <div class="column">
-                <h3 class="player_name">abc</h3>
                 <h3 class="player_life"></h3>
-                <button class="button_p5">+5</button>
+                <button class="button p1 player2">+1</button>
                 <div class="clr"></div>
-                <button class="button_p1">+1</button>
-                <div class="clr"></div>
-                <button class="button_m1">-1</button>
-                <div class="clr"></div>
-                <button class="button_m5">-5</button>
+                <button class="button m1 player2">-1</button>
                 <div class="clr"></div>
             </div>
         </div>
