added dice and improved centering

--- a/html/life_counter.html
+++ b/html/life_counter.html
@@ -11,14 +11,17 @@
     <body>
         <div class="main_content">
             <div class="column">
+                <div class="player_life player1"></div>
                 <button class="button p1 player1">+1</button>
-                <h3 class="player_life"></h3>
                 <div class="clr"></div>
                 <button class="button m1 player1">-1</button>
                 <div class="clr"></div>
             </div>
+            <div class="dice">
+                <img id="d6" src="../media/d6_1.png">
+            </div>
             <div class="column">
-                <h3 class="player_life"></h3>
+                <div class="player_life player2"></div>
                 <button class="button p1 player2">+1</button>
                 <div class="clr"></div>
                 <button class="button m1 player2">-1</button>
