--- a/html/life_counter.html
+++ b/html/life_counter.html
@@ -8,6 +8,14 @@
         <link rel="stylesheet" type="text/css" media="all" href="../css/life_counter.css"/>
         <script type="module" src="../javascript/life_counters.js"></script>
     </head>
+    <div class="hidden_canvas_images">
+        <img id="d6_1" src="../media/d6_1.png">
+        <img id="d6_2" src="../media/d6_2.png">
+        <img id="d6_3" src="../media/d6_3.png">
+        <img id="d6_4" src="../media/d6_4.png">
+        <img id="d6_5" src="../media/d6_5.png">
+        <img id="d6_6" src="../media/d6_6.png">
+    </div>
     <body>
         <div class="main_content">
             <div class="column">
@@ -18,7 +26,7 @@
                 <div class="clr"></div>
             </div>
             <div class="dice">
-                <img id="d6" src="../media/d6_1.png">
+                <canvas id="d6"></canvas>
             </div>
             <div class="column">
                 <div class="player_life player2"></div>
