added ios home screen icon

--- a/html/life_counter.html
+++ b/html/life_counter.html
@@ -6,6 +6,7 @@
         <link rel="shortcut icon" href="../icons/favicon.png"/>
         <link rel="stylesheet" type="text/css" media="all" href="../css/all.css">
         <link rel="stylesheet" type="text/css" media="all" href="../css/life_counter.css"/>
+        <link rel="apple-touch-icon" href="../icons/apple-touch-icon.png">
         <script type="module" src="../javascript/life_counters.js"></script>
     </head>
     <div class="hidden_canvas_images">
