fullscreen support for webapp ios

--- a/html/life_counter.html
+++ b/html/life_counter.html
@@ -2,7 +2,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="initial-scale=1.0">
-
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        
         <link rel="shortcut icon" href="../icons/favicon.png"/>
         <link rel="stylesheet" type="text/css" media="all" href="../css/all.css">
         <link rel="stylesheet" type="text/css" media="all" href="../css/life_counter.css"/>
