--- a/html/life_counter.html
+++ b/html/life_counter.html
@@ -1,6 +1,8 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <title>Life Counter</title>
+        
         <meta name="viewport" content="initial-scale=1.0">
         <meta name="apple-mobile-web-app-capable" content="yes">
         
@@ -9,8 +11,9 @@
         <link rel="stylesheet" type="text/css" media="all" href="../css/life_counter.css"/>
         <link rel="apple-touch-icon" href="../icons/apple-touch-icon.png">
         <script type="module" src="../javascript/life_counters.js"></script>
+        <link rel="manifest" href="../manifest.webmanifest">
     </head>
-    <div class="hidden_canvas_images">
+    <div class="hidden_item">
         <img id="d6_1" src="../media/d6_1.png">
         <img id="d6_2" src="../media/d6_2.png">
         <img id="d6_3" src="../media/d6_3.png">
