--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="shortcut icon" href="icons/favicon.png"/>
         <link rel="stylesheet" type="text/css" media="all" href="css/all.css">
         <link rel="stylesheet" type="text/css" media="all" href="css/main.css">
+        <link rel="manifest" href="/manifest.webmanifest">
     </head>
 
     <body>
