added undo button

--- a/html/life_counter.html
+++ b/html/life_counter.html
@@ -5,11 +5,11 @@
         
         <meta name="viewport" content="initial-scale=1.0">
         <meta name="apple-mobile-web-app-capable" content="yes">
+        <link rel="apple-touch-icon" href="../icons/apple-touch-icon.png">
         
         <link rel="shortcut icon" href="../icons/favicon.png"/>
         <link rel="stylesheet" type="text/css" media="all" href="../css/all.css">
         <link rel="stylesheet" type="text/css" media="all" href="../css/life_counter.css"/>
-        <link rel="apple-touch-icon" href="../icons/apple-touch-icon.png">
         <script type="module" src="../javascript/life_counters.js"></script>
         <link rel="manifest" href="../manifest.webmanifest">
     </head>
@@ -23,6 +23,9 @@
     </div>
     <div class="poison_toggle">
         <img id="poison_image" src="../media/poison_toggle_off.png">
+    </div>
+    <div class="undo_button">
+        <img id="undo_image" src="../media/undo_icon.png">
     </div>
     <body>
         <div class="main_content">
