--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="initial-scale=1.0">
         <title>Home</title>
+
+        <meta name="viewport" content="initial-scale=1.0">
         <meta name="apple-mobile-web-app-capable" content="yes">
+        <link rel="apple-touch-icon" href="../icons/apple-touch-icon.png">
         
-        <link rel="shortcut icon" href="icons/favicon.png"/>
-        <link rel="stylesheet" type="text/css" media="all" href="css/all.css">
-        <link rel="stylesheet" type="text/css" media="all" href="css/main.css">
+        <link rel="shortcut icon" href="/icons/favicon.png"/>
+        <link rel="stylesheet" type="text/css" media="all" href="/css/all.css">
+        <link rel="stylesheet" type="text/css" media="all" href="/css/main.css">
         <link rel="manifest" href="/manifest.webmanifest">
     </head>
 
