yeah root path was not working

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <link rel="apple-touch-icon" href="../icons/apple-touch-icon.png">
         
-        <link rel="shortcut icon" href="/icons/favicon.png"/>
-        <link rel="stylesheet" type="text/css" media="all" href="/css/all.css">
-        <link rel="stylesheet" type="text/css" media="all" href="/css/main.css">
-        <link rel="manifest" href="/manifest.webmanifest">
+        <link rel="shortcut icon" href="icons/favicon.png"/>
+        <link rel="stylesheet" type="text/css" media="all" href="css/all.css">
+        <link rel="stylesheet" type="text/css" media="all" href="css/main.css">
+        <link rel="manifest" href="manifest.webmanifest">
     </head>
 
     <body>
