--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
         <meta name="viewport" content="initial-scale=1.0">
         <meta name="apple-mobile-web-app-capable" content="yes">
-        <link rel="apple-touch-icon" href="../icons/apple-touch-icon.png">
+        <link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
         
         <link rel="shortcut icon" href="icons/favicon.png"/>
         <link rel="stylesheet" type="text/css" media="all" href="css/all.css">
