--- a/html/life_counter.html
+++ b/html/life_counter.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Life Counter</title>
+        <title>MTG Helper</title>
         
         <meta name="viewport" content="initial-scale=1.0">
         <meta name="apple-mobile-web-app-capable" content="yes">
