--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Home</title>
+        <title>MTG Helper</title>
 
         <meta name="viewport" content="initial-scale=1.0">
         <meta name="apple-mobile-web-app-capable" content="yes">
@@ -15,7 +15,7 @@
 
     <body>
         <div id="intro">
-            <h1>Magic Helper</h1>
+            <h1>MTG Helper</h1>
         </div>
 
         <div id="selection_menu">
