adding card search

--- a/html/card_search.html
+++ b/html/card_search.html
@@ -29,6 +29,12 @@
         size="10"
         class="option"
     />
+    <button
+        id="card_search_button"
+        class="option"
+        onclick="">
+        Search
+    </button>
     <div class="card-entry">
 
     </div>
