added card fetch module

--- a/html/card_search.html
+++ b/html/card_search.html
@@ -18,14 +18,14 @@
 </head>
 <body>
 <div class="main_content">
-    <label for="card_search_input" class="option">Input (set cn):</label>
+    <label for="card_search_input" class="option">Input (set:cn):</label>
     <input
         type="text"
         id="card_search_input"
         name="card_search_input"
         required
         minlength="4"
-        maxlength="8"
+        maxlength="10"
         size="10"
         class="option"
     />
