adding search to life counter

--- a/html/card_search.html
+++ b/html/card_search.html
@@ -36,8 +36,7 @@
         onclick="">
         Search
     </button>
-    <div class="card-entry">
-
+    <div id="card-entry">
     </div>
 </div>
 </body>
