--- a/html/life_counter.html
+++ b/html/life_counter.html
@@ -31,6 +31,9 @@
 <div class="undo_button">
     <img id="undo_image" src="../media/undo_icon.png" alt="Undo button">
 </div>
+<div class="search_button">
+    <img id="search_button" src="../media/search_64.png" alt="Search button">
+</div>
 <body>
     <div class="main_content">
         <div class="column column_50 life">
