created player module

--- a/html/life_counter.html
+++ b/html/life_counter.html
@@ -25,14 +25,14 @@
     <img id="d6_5" src="../media/d6_5.png" alt="You rolled a five!">
     <img id="d6_6" src="../media/d6_6.png" alt="You rolled a six!">
 </div>
-<div class="poison_toggle">
-    <img id="poison_image" src="../media/poison_toggle_off.png" alt="Poison counter toggle">
+<div id="poison_button">
+    <img id="poison_icon" src="../media/poison_toggle_off.png" alt="Poison counter toggle">
 </div>
-<div class="undo_button">
-    <img id="undo_image" src="../media/undo_icon.png" alt="Undo button">
+<div id="undo_button">
+    <img id="undo_icon" src="../media/undo_icon.png" alt="Undo button">
 </div>
-<div class="search_button">
-    <img id="search_button" src="../media/search_64.png" alt="Search button">
+<div id="search_button">
+    <img id="search_icon" src="../media/search_64.png" alt="Search button">
 </div>
 <body>
     <div class="main_content">
@@ -50,7 +50,7 @@
             <button class="button button_17 m1p player1">-1</button>
             <div class="clr"></div>
         </div>
-        <div class="dice">
+        <div id="dice">
             <canvas id="d6"></canvas>
         </div>
         <div class="column column_50 life">
