--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <a href="html/life_counter.html" class="option">
             Life Counter
         </a>
-        <a href="html/card_search.html" class="option">
-            Card Search
+        <a href="html/deckbuilder.html" class="option">
+            Deck Builder
         </a>
     </div>
 </body>
